Nicht weiter referenzierte Quellcodes gelöscht, Grundlage für Datenbank-Mapper geschaffen, kleinere Fehler behoben, TabelModels auf Collections umgestellt, Nun korrekte Darstellung von Datumsfeldern mit separater Klasse

--- a/branches/sven/nbproject/project.properties
+++ b/branches/sven/nbproject/project.properties
@@ -1,9 +1,9 @@
 ant.customtasks.libs=JWSAntTasks
 application.args=
 application.desc=Protokolldatebank Konzept-e
+application.homepage=http://konzept-e.de/
 application.title=ToDo
 application.vendor=M. Hertel
-auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -153,8 +153,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -171,12 +171,12 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=local
-jnlp.codebase.url=file:/H:/ToDo/Todo/source/ToDo/dist/
+jnlp.codebase.url=file:/C:/Users/sven/Desktop/sven/dist/
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=todo.gui.MainGUI
+main.class=todo.dbcon.DbTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
