--- a/branches/sven/nbproject/project.properties
+++ b/branches/sven/nbproject/project.properties
@@ -176,7 +176,7 @@ jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
-main.class=todo.dbcon.DbTest
+main.class=todo.gui.MainGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
