preparing new version for rollout

--- a/branches/sven/nbproject/project.properties
+++ b/branches/sven/nbproject/project.properties
@@ -85,7 +85,7 @@ file.reference.xercesImpl.jar=lib/xercesImpl.jar
 file.reference.xml-apis-ext.jar=lib/xml-apis-ext.jar
 file.reference.xml-apis.jar=lib/xml-apis.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.swing-layout.classpath}:\
@@ -171,7 +171,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=local
-jnlp.codebase.url=file:/C:/Users/sven/Desktop/sven/dist/
+jnlp.codebase.url=file:/E:/Konzept-e/sven/dist
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.offline-allowed=false
