--- a/branches/sven/nbproject/project.properties
+++ b/branches/sven/nbproject/project.properties
@@ -170,6 +170,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/E:/Konzept-e/sven/dist
 jnlp.descriptor=application
