Auswertung nach WV-Datum als Liste funktioniert noch nicht, Button disabled

--- a/branches/sven/nbproject/project.properties
+++ b/branches/sven/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 ant.customtasks.libs=JWSAntTasks
 application.args=
 application.desc=Protokolldatebank Konzept-e
@@ -22,6 +25,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/ToDo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
 file.reference.ant-1.5.1.jar=lib/ant-1.5.1.jar
@@ -66,7 +70,7 @@ file.reference.jcommon-1.0.15.jar=lib/jcommon-1.0.15.jar
 file.reference.jdt-compiler-3.1.1.jar=lib/jdt-compiler-3.1.1.jar
 file.reference.jfreechart-1.0.12.jar=lib/jfreechart-1.0.12.jar
 file.reference.joc-samples.jar=lib/joc-samples.jar
-file.reference.joc-v2.1.3-eval.jar=lib/joc-v2.1.3-eval.jar
+file.reference.joc-v3.0.0-basic.jar=lib/joc-v3.0.0-basic.jar
 file.reference.jpa.jar=lib/jpa.jar
 file.reference.jxl-2.6.jar=lib/jxl-2.6.jar
 file.reference.log4j-1.2.15.jar=lib/log4j-1.2.15.jar
@@ -132,8 +136,8 @@ javac.classpath=\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.joc-samples.jar}:\
-    ${file.reference.joc-v2.1.3-eval.jar}:\
     ${file.reference.jpa.jar}:\
+    ${file.reference.joc-v3.0.0-basic.jar}:\
     ${file.reference.jxl-2.6.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.mondrian-3.1.1.12687.jar}:\
@@ -153,6 +157,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
