Lokale Änderungen und die Änderungen aus Revision 43 zusammengeführt, Bibliotheken aktualisiert und alte gelöscht, Reports angepasst

--- a/branches/sven/nbproject/project.properties
+++ b/branches/sven/nbproject/project.properties
@@ -60,9 +60,10 @@ file.reference.iText-2.1.0.jar=lib/iText-2.1.0.jar
 file.reference.j-interop.jar=lib/j-interop.jar
 file.reference.j-interopdeps.jar=lib/j-interopdeps.jar
 file.reference.jakarta-bcel-20050813.jar=lib/jakarta-bcel-20050813.jar
-file.reference.jasperreports-3.5.2-applet.jar=lib/jasperreports-3.5.2-applet.jar
-file.reference.jasperreports-3.5.2-javaflow.jar=lib/jasperreports-3.5.2-javaflow.jar
-file.reference.jasperreports-3.5.2.jar=lib/jasperreports-3.5.2.jar
+file.reference.jasperreports-3.7.3.jar=lib/jasperreports-3.7.3.jar
+file.reference.jasperreports-applet-3.7.3.jar=lib/jasperreports-applet-3.7.3.jar
+file.reference.jasperreports-fonts-3.7.3.jar=lib/jasperreports-fonts-3.7.3.jar
+file.reference.jasperreports-javaflow-3.7.3.jar=lib/jasperreports-javaflow-3.7.3.jar
 file.reference.jaxen-1.1.1.jar=lib/jaxen-1.1.1.jar
 file.reference.jcalendar.jar=lib/jcalendar.jar
 file.reference.jcifs-1.3.12.jar=lib/jcifs-1.3.12.jar
@@ -126,11 +127,12 @@ javac.classpath=\
     ${file.reference.j-interop.jar}:\
     ${file.reference.j-interopdeps.jar}:\
     ${file.reference.jakarta-bcel-20050813.jar}:\
-    ${file.reference.jasperreports-3.5.2-applet.jar}:\
-    ${file.reference.jasperreports-3.5.2-javaflow.jar}:\
-    ${file.reference.jasperreports-3.5.2.jar}:\
     ${file.reference.jaxen-1.1.1.jar}:\
     ${file.reference.jcalendar.jar}:\
+    ${file.reference.jasperreports-3.7.3.jar}:\
+    ${file.reference.jasperreports-applet-3.7.3.jar}:\
+    ${file.reference.jasperreports-fonts-3.7.3.jar}:\
+    ${file.reference.jasperreports-javaflow-3.7.3.jar}:\
     ${file.reference.jcifs-1.3.12.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
