--- a/todo-old/nbproject/project.properties
+++ b/todo-old/nbproject/project.properties
@@ -53,9 +53,11 @@ file.reference.commons-digester-1.7.jar=lib/commons-digester-1.7.jar
 file.reference.commons-javaflow-20060411.jar=lib/commons-javaflow-20060411.jar
 file.reference.commons-logging-1.0.2.jar=lib/commons-logging-1.0.2.jar
 file.reference.commons-logging-api-1.0.2.jar=lib/commons-logging-api-1.0.2.jar
+file.reference.groovy-all-1.0.jar=lib/groovy-all-1.0.jar
 file.reference.groovy-all-1.5.5.jar=lib/groovy-all-1.5.5.jar
 file.reference.hibernate3.jar=lib/hibernate3.jar
 file.reference.hsqldb-1.7.1.jar=lib/hsqldb-1.7.1.jar
+file.reference.itext-1.3.1.jar=lib/itext-1.3.1.jar
 file.reference.iText-2.1.0.jar=lib/iText-2.1.0.jar
 file.reference.j-interop.jar=lib/j-interop.jar
 file.reference.j-interopdeps.jar=lib/j-interopdeps.jar
@@ -67,22 +69,31 @@ file.reference.jasperreports-javaflow-3.7.3.jar=lib/jasperreports-javaflow-3.7.3
 file.reference.jaxen-1.1.1.jar=lib/jaxen-1.1.1.jar
 file.reference.jcalendar.jar=lib/jcalendar.jar
 file.reference.jcifs-1.3.12.jar=lib/jcifs-1.3.12.jar
+file.reference.jcommon-1.0.0.jar=lib/jcommon-1.0.0.jar
 file.reference.jcommon-1.0.15.jar=lib/jcommon-1.0.15.jar
 file.reference.jdt-compiler-3.1.1.jar=lib/jdt-compiler-3.1.1.jar
+file.reference.jfreechart-1.0.0.jar=lib/jfreechart-1.0.0.jar
 file.reference.jfreechart-1.0.12.jar=lib/jfreechart-1.0.12.jar
 file.reference.joc-samples.jar=lib/joc-samples.jar
+file.reference.joc-v2.1.3-eval.jar=lib/joc-v2.1.3-eval.jar
 file.reference.joc-v3.0.0-basic.jar=lib/joc-v3.0.0-basic.jar
 file.reference.jpa.jar=lib/jpa.jar
+file.reference.jtidy-8.0.jar=lib/jtidy-8.0.jar
 file.reference.jxl-2.6.jar=lib/jxl-2.6.jar
 file.reference.log4j-1.2.15.jar=lib/log4j-1.2.15.jar
+file.reference.mondrian-2.3.2.8944.jar=lib/mondrian-2.3.2.8944.jar
 file.reference.mondrian-3.1.1.12687.jar=lib/mondrian-3.1.1.12687.jar
 file.reference.moyocore.jar=lib/moyocore.jar
+file.reference.novaworx-syntax-0.0.7.jar=lib/novaworx-syntax-0.0.7.jar
 file.reference.png-encoder-1.5.jar=lib/png-encoder-1.5.jar
+file.reference.poi-2.0-final-20040126.jar=lib/poi-2.0-final-20040126.jar
 file.reference.poi-3.2-FINAL-20081019.jar=lib/poi-3.2-FINAL-20081019.jar
 file.reference.rhino-1.7R1.jar=lib/rhino-1.7R1.jar
 file.reference.saaj-api-1.3.jar=lib/saaj-api-1.3.jar
+file.reference.sam.jar=lib/sam.jar
 file.reference.servlet-api.jar=lib/servlet-api.jar
 file.reference.servlet.jar=lib/servlet.jar
+file.reference.SHEF.jar=lib/SHEF.jar
 file.reference.spring-beans.jar=lib/spring-beans.jar
 file.reference.spring-core.jar=lib/spring-core.jar
 file.reference.xalan.jar=lib/xalan.jar
@@ -122,36 +133,47 @@ javac.classpath=\
     ${file.reference.commons-javaflow-20060411.jar}:\
     ${file.reference.commons-logging-1.0.2.jar}:\
     ${file.reference.commons-logging-api-1.0.2.jar}:\
+    ${file.reference.groovy-all-1.0.jar}:\
     ${file.reference.groovy-all-1.5.5.jar}:\
     ${file.reference.hibernate3.jar}:\
     ${file.reference.hsqldb-1.7.1.jar}:\
+    ${file.reference.itext-1.3.1.jar}:\
     ${file.reference.iText-2.1.0.jar}:\
     ${file.reference.j-interop.jar}:\
     ${file.reference.j-interopdeps.jar}:\
     ${file.reference.jakarta-bcel-20050813.jar}:\
-    ${file.reference.jaxen-1.1.1.jar}:\
-    ${file.reference.jcalendar.jar}:\
     ${file.reference.jasperreports-3.7.3.jar}:\
     ${file.reference.jasperreports-applet-3.7.3.jar}:\
     ${file.reference.jasperreports-fonts-3.7.3.jar}:\
     ${file.reference.jasperreports-javaflow-3.7.3.jar}:\
+    ${file.reference.jaxen-1.1.1.jar}:\
+    ${file.reference.jcalendar.jar}:\
     ${file.reference.jcifs-1.3.12.jar}:\
+    ${file.reference.jcommon-1.0.0.jar}:\
     ${file.reference.jcommon-1.0.15.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
+    ${file.reference.jfreechart-1.0.0.jar}:\
     ${file.reference.jfreechart-1.0.12.jar}:\
     ${file.reference.joc-samples.jar}:\
-    ${file.reference.jpa.jar}:\
+    ${file.reference.joc-v2.1.3-eval.jar}:\
     ${file.reference.joc-v3.0.0-basic.jar}:\
+    ${file.reference.jpa.jar}:\
+    ${file.reference.jtidy-8.0.jar}:\
     ${file.reference.jxl-2.6.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.mondrian-2.3.2.8944.jar}:\
     ${file.reference.mondrian-3.1.1.12687.jar}:\
     ${file.reference.moyocore.jar}:\
+    ${file.reference.novaworx-syntax-0.0.7.jar}:\
     ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-2.0-final-20040126.jar}:\
     ${file.reference.poi-3.2-FINAL-20081019.jar}:\
     ${file.reference.rhino-1.7R1.jar}:\
     ${file.reference.saaj-api-1.3.jar}:\
+    ${file.reference.sam.jar}:\
     ${file.reference.servlet-api.jar}:\
     ${file.reference.servlet.jar}:\
+    ${file.reference.SHEF.jar}:\
     ${file.reference.spring-beans.jar}:\
     ${file.reference.spring-core.jar}:\
     ${file.reference.xalan.jar}:\
