--- a/todoRelationMigrate/nbproject/private/private.properties
+++ b/todoRelationMigrate/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Sven\\.netbeans\\6.9\\build.properties
+user.properties.file=C:\\Dokumente und Einstellungen\\hertel\\.netbeans\\7.0\\build.properties
