letzter Stand nach Migration bei Produktivsystem JUnit-Libs entfernt

--- a/todoHtmlMigrate/nbproject/project.properties
+++ b/todoHtmlMigrate/nbproject/project.properties
@@ -44,9 +44,7 @@ javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -63,6 +61,7 @@ javadoc.windowtitle=
 main.class=todohtmlmigrate.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
